[workspace]
members = [
    "zlgcan-common",
    "zlgcan-driver",
    "zlgcan-driver-rs-api",
]
resolver = "2"

[workspace.dependencies]
log = "0.4"
thiserror = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
lazy_static = "1.4.0"
dlopen2 = "0.7"
can-type-rs = "1"

zlgcan_common = { version = "3.0.0-rc0", path = "zlgcan-common" }
zlgcan_driver = { version = "3.0.0-rc0", path = "zlgcan-driver" }
