[workspace]
members = [
    "zlgcan-common",
    "zlgcan-driver",
    "zlgcan-driver-rs-api",
]
resolver = "2"

[workspace.dependencies]
log = "0.4"
thiserror = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
lazy_static = "1.4.0"
dlopen2 = "0.7"
dotenvy = "0.15"
isotp-rs = { path = "../isotp-rs" }
can-type-rs = { path = "../can-type-rs" }

zlgcan_common = { path = "zlgcan-common" }
zlgcan_driver = { path = "zlgcan-driver" }

# dev dependencies
rand = "0.8.5"
anyhow = "1"
hex-literal = "0.4"
