[workspace]
members = [
    "zlgcan-common",
    "zlgcan-driver",
    "zlgcan-driver-rs-api",
]
resolver = "2"

[workspace.dependencies]
log = "0.4"
thiserror = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
dlopen2 = "0.7"
dotenvy = "0.15"
isotp-rs = { version = "0.1.8-alpha1", features = ["default", "tokio"] }

zlgcan_common = { path = "zlgcan-common" }
zlgcan_driver = { path = "zlgcan-driver" }

# dev dependencies
rand = "0.8.5"
anyhow = "1"
hex-literal = "0.4"
