[package]
name = "zlgcan_common"
version = "1.0.0-rc1"
edition = "2021"
authors = ["zhuyu <zhuyu4839@gmail.com>"]
license-file = "LICENCE-GPL-V3"
description = "A ZLGCAN driver with rust."
homepage = "https://github.com/zhuyu4839/zlgcan-driver-rs"
repository = "https://github.com/zhuyu4839/zlgcan-driver-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { version = "1.0.58" }
serde_yaml = "0.9.33"
serde = { version = "1.0.197", features = ["derive"] }
log = "0.4"
