[package]
name = "zlgcan_common"
version = "3.0.0-rc0"
edition = "2021"
authors = ["zhuyu <zhuyu4839@gmail.com>"]
license = "GPL-3.0"
description = "A ZLGCAN driver with rust."
homepage = "https://github.com/zhuyu4839/zlgcan-driver-rs"
repository = "https://github.com/zhuyu4839/zlgcan-driver-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
can-type-rs = { workspace = true }

[dev-dependencies]
anyhow = "1"
