[package]
name = "zlgcan-driver-rs-api"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
zlgcan_common = { version = "1.0.0-rc2" }
zlgcan_driver = { version = "1.0.0-rc2" }
