[package]
name = "zlgcan-driver-rs-api"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
zlgcan_common = { version = "1.0.0-rc4" }
zlgcan_driver = { version = "1.0.0-rc4" }
