[package]
name = "zlgcan_driver"
version = "3.0.0-rc0"
edition = "2021"
authors = ["zhuyu <zhuyu4839@gmail.com>"]
license = "GPL-3.0"
description = "A ZLGCAN driver with rust."
homepage = "https://github.com/zhuyu4839/zlgcan-driver-rs"
repository = "https://github.com/zhuyu4839/zlgcan-driver-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
rand = "0.8.5"
anyhow = "1"

[dependencies]
log = { workspace = true }
dlopen2 = { workspace = true }
isotp-rs = { workspace = true }
can-type-rs = { workspace = true }
zlgcan_common = { workspace = true }

[dependencies.tokio]
version = "1"
optional = true
features = ["rt-multi-thread", "macros", "time"]

[features]
default = ["async", ]
async = ["tokio", "isotp-rs/async", "can-type-rs/async"]

#[lib]
#crate-type = ["cdylib"]
#bench = false
#doc = true
